home description, background color, button color, card media queries added

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,19 @@
   width: 35%;
 }
 
+.App{
+  font-family: "-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica Neue,Arial,sans-serif,";
+
+}
+
+body{
+  background-color: #FFF8E8
+
+}
+
+
+@media (max-width: 768px) {
+  #card {
+    width: 100%;
+  }
+}
